BLM solidarity expansion mobile fixes

--- a/assets/css/art.scss
+++ b/assets/css/art.scss
@@ -30,6 +30,12 @@ button {
     text-decoration: underline;
 }
 
+#read-more:hover {
+    color: $gray;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 a {
     color: white;
 }
